k8s/pfadi-finder-midata-adapter.yaml
apiVersion: v1
kind: Service
metadata:
  name: pfadi-finder-midata-adapter
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: pfadi-finder-midata-adapter

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pfadi-finder-midata-adapter
spec:
  selector:
    matchLabels:
      app: pfadi-finder-midata-adapter
  template:
    metadata:
      labels:
        app: pfadi-finder-midata-adapter
    spec:
      containers:
        - name: pfadi-finder-midata-adapter
          image: ghcr.io/scout-ch/pfadi-finder-midata-adapter:latest
          ports:
            - containerPort: 3000
