k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pfadi-finder-midata-adapter
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure # necessary, since we have multiple entrypoints
    cert-manager.io/cluster-issuer: letsencrypt

spec:
  rules:
    - host: pfadi-finder-midata-adapter.scout.ch
      http:
        paths:
          - path: /src/getdivisions.php
            pathType: Prefix
            backend:
              service:
                name: pfadi-finder-midata-adapter
                port:
                  number: 80
          - path: /src/getonedivision.php
            pathType: Prefix
            backend:
              service:
                name: pfadi-finder-midata-adapter
                port:
                  number: 80
  tls:
    - hosts:
        - pfadi-finder-midata-adapter.scout.ch
      secretName: tls-cert
